0.0100_02 Mon Oct 31 00:37:26 IST 2005
    * Changed the string Test::Harness to Test::Shlomif::Harness in 
    Test::Shlomif::Harness::Straps.

Backports from Test::Harness to Test::Shlomif::Harness:

2.56 Wed Sep 28 16:04:00 CDT 2005
    [FIXES]
    * Incorporate bleadperl patch to fix Test::Harness on VMS.

Revision history for Perl extension Test::Harness

2.53_02 Thu Aug 25 21:37:01 CDT 2005
    [FIXES]
    * File order in prove is now sorted within the directory.  It's not
      the sorting that's important as much as the deterministic results.
      Thanks to Adam Kennedy and Casey West for pointing this out,
      independently of each other, with 12 hours of the other.

    [INTERNALS]
    * Fix calls to podusage() to not use the DATA typeglob.  Thanks sungo.

2.53_01 Sun Jul 10 10:45:27 CDT 2005
    [FIXES]
    * If we go over 100,000 tests, it used to print out a warning for
      every test over 100,000.  Now, we stop after the first.  Thanks to
      Sebastien Aperghis-Tramoni.

2.52 Sun Jun 26 23:05:19 CDT 2005
    No changes

2.51_02
    [ENHANCEMENTS]
    * The Test::Harness timer is now off by default.  Set HARNESS_TIMER
      true if you want it.  Added --timer flag to prove.

2.50_01
    [FIXES]
    * Call CORE::time() to figure out if we should print when we're
      printing once per second.  Otherwise, we're using Time::HiRes'
      version of it.  Thanks, Nicholas Clark.

2.50 Tue Jun 21 14:32:12 CDT 2005
    [FIXES]
    * Added some includes in t/strap-analyze.t to make Cygwin happy.

2.49_02 Tue Jun 21 09:54:44 CDT 2005
    [FIXES]
    * Added some includes in t/test_harness.t to make Cygwin happy.

2.49_01 Fri Jun 10 15:37:31 CDT 2005
    [ENHANCEMENTS]
    * Now shows elapsed time in 1000ths of a second if Time::HiRes
      is available.

    [FIXES]
    * Test::Harness::Iterator didn't have a 1; at the end.  Thanks to
      Steve Peters for finding it.

2.48    Fri Apr 22 22:41:46 CDT 2005
    Released after weeks of non-complaint.
